auth login and register working

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,33 @@
+appdirs==1.4.4
+appnope==0.1.0
+backcall==0.2.0
 bcrypt==3.2.0
+certifi==2020.11.8
 cffi==1.14.4
 click==7.1.2
+decorator==4.4.2
+distlib==0.3.1
+filelock==3.0.12
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
-Flask-Cors==3.0.9
 Flask-Login==0.5.0
+ipython==7.19.0
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
+jedi==0.17.2
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-peewee==3.14.0
-psycopg2==2.8.6
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+pipenv==2020.11.15
+prompt-toolkit==3.0.8
+ptyprocess==0.6.0
 pycparser==2.20
+Pygments==2.7.2
 six==1.15.0
+traitlets==5.0.5
+virtualenv==20.2.1
+virtualenv-clone==0.5.4
+wcwidth==0.2.5
 Werkzeug==1.0.1
